--- a/index.html
+++ b/index.html
@@ -5,29 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Day Planner</title>
-     <!-- bootstrap link -->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!--stylessheet links-->
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="style.css" />
+
+  
+     
+ 
 </head>
-<body>
-<header>
-    <div class="jumbotron">
-        <h1 id= "header" class="text-center">Day Planner</h1>
-        <h3 id = "subheader" class="text-center">Simple workday scheduler to help manage your day</h3>
-        <h2 id="dateline"></h2>
-      </div>
-</header>
     
-<div class = "container">
-    <div class="row">
-        <div class="col-md-12">
-          <div class="card mb-2">
-            <h3 class="card-header">time</h3>
-            <div class="card-body text-center">
-              <h1 id="mainbody">Activiy</h1>
-            </div>
-          </div>
-        </div>
-      </div>
+<body>
+    <header class="jumbotron">
+      <h1 class="display-3">Work Day Scheduler</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead"></p>
+    </header>
+    <div class="container">
+      <!-- Timeblocks go here -->
+    </div>
+
 
 
 </div>
@@ -36,5 +45,9 @@
 
 
 
+   <!-- Js links -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="script.js"></script> 
 </body>
 </html>
